2002-03-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* tbr/Makefile.am: Remove.
	* tbr/.cvsignore: Remove.
	* tbr/tbr.c: Remove.
	* tbr/tbr.h: Remove.
	* configure.ac: Remove tbr subdir.
	* Makefile.am: Remove tbr subdir.

2002-03-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* tbr/Makefile.am: New file.
	* tbr/.cvsignore: New file.
	* tbr/tbr.c: New file.
	* tbr/tbr.h: New file.
	* configure.ac: Add tbr subdir.
	* Makefile.am: Add tbr subdir.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* cache/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* reg_win/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* syscall/Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-09-27	Jiri Gaisler <jiri@gaisler.com>

	* cpu_asm.S: Small patch to fix a bug in the rtems sparc port. The
	bug has been there all the time, but only hits the leon bsp since the
	leon cpu has a 5-stage pipeline (erc32 has 4 stages).

2001-09-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/Makefile.am: Use 'TMPINSTALL_FILES ='.
	* cache/Makefile.am: Use 'PREINSTALL_FILES ='.
	* cache/Makefile.am: Use 'CLEANFILES ='.

2001-02-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de:

	* include/Makefile.am, syscall/Makefile.am, cache/Makefile.am:
	Apply include_*HEADERS instead of H_FILES.
	* cache/.cvsignore: Add cache.h.

2000-11-30	Joel Sherrill <joel@OARcorp.com>

	* cache/Makefile.am: Removed automake warning by introducing a
	simple variable.

2000-11-27	Joel Sherrill <joel@OARcorp.com>

	* cache/cache.h: Fix reference to MC68040 and put in stubs
	for missing support routines.  The functionality of these