@@ -10,7 +10,7 @@ S_FILES = syscall.S
 
 noinst_HEADERS = syscall.h
 
-syscall_rel_OBJECTS = $(S_FILES:%.S=$(ARCH)/%.o)
+syscall_rel_OBJECTS = $(S_FILES:%.S=$(ARCH)/%.$(OBJEXT))
 
 include $(RTEMS_ROOT)/make/custom/@RTEMS_BSP@.cfg
 include $(top_srcdir)/../../../../../automake/compile.am
