@@ -1,3 +1,9 @@
+2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* cache/Makefile.am: Use .$(OBJEXT) instead of .o.
+ 	* reg_win/Makefile.am: Use .$(OBJEXT) instead of .o.
+ 	* syscall/Makefile.am: Use .$(OBJEXT) instead of .o.
+
 2002-03-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* tbr/Makefile.am: Remove.
